--- a/web/secciones/contacto.html
+++ b/web/secciones/contacto.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contacto - Gimnasio CCOU</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" href="img/CCOU3.png" type="image/x-icon">
 </head>
 <body>
   
