--- a/web/secciones/admin.html
+++ b/web/secciones/admin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BackOffice - CCOU</title>
-
+  <link rel="shortcut icon" href="img/CCOU3.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
