--- a/web/secciones/backofficeusuarios.html
+++ b/web/secciones/backofficeusuarios.html
@@ -8,6 +8,7 @@
   />
   <title>BackOffice - Rutina del usuario</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" href="img/CCOU3.png" type="image/x-icon">
 </head>
 <body>
 
