--- a/web/secciones/register.html
+++ b/web/secciones/register.html
@@ -48,7 +48,7 @@
         <input type="email" id="correo" name="correo" placeholder="ejemplo@correo.com" required />
 
         <button type="submit" class="btn-primary">Registrarse</button>
-        <p id="mensajeSignup" style="margin-top: 0.8rem; color: darkred;"></p>
+        <p id="mensajeSignup"></p>
       </form>
     </section>
   </main>
