--- a/web/secciones/perfil.html
+++ b/web/secciones/perfil.html
@@ -17,7 +17,7 @@
       </button>
 
       <nav class="nav-links" id="navLinks">
-        <a href="index.html">Inicio</a>
+        <a href="Index.html">Inicio</a>
         <a href="rutina.html">Rutina</a>
         <a href="staff.html">Staff</a>
         <a href="contacto.html">Contacto</a>
