--- a/web/secciones/Index.html
+++ b/web/secciones/Index.html
@@ -67,7 +67,7 @@
         </div>
       </section>
 
-      <button class="help-btn" onclick="window.location.href='rutina.html'">¿Necesitás ayuda con tu rutina?</button>
+      <button class="help-btn" onclick="window.location.href='contacto.html'">¿Necesitás ayuda con tu rutina?</button>
     </main>
 
     <footer class="footer">
